.provarCaches/00D5f000005vwGkEAI/objects/rstk__sylimits__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_sylimits</customHelpPage>
    <description>sylimits__c</description>
    <fields>
        <fullName>rstk__sylimits_poloader__c</fullName>
        <label>Z_OBSOLETE</label>
        <summaryFilterItems>
            <field>rstk__sylimitd__c.rstk__sylimitd_type__c</field>
            <operation>equals</operation>
            <value>PO</value>
        </summaryFilterItems>
        <summaryForeignKey>rstk__sylimitd__c.rstk__sylimitd_sylimits__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__sylimits_poloadercnt__c</fullName>
        <label>POLOADER Count</label>
        <summarizedField>rstk__sylimitd__c.rstk__sylimitd_recordcount__c</summarizedField>
        <summaryFilterItems>
            <field>rstk__sylimitd__c.rstk__sylimitd_type__c</field>
            <operation>equals</operation>
            <value>PO</value>
        </summaryFilterItems>
        <summaryForeignKey>rstk__sylimitd__c.rstk__sylimitd_sylimits__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__sylimits_seq__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sylimits_soapi__c</fullName>
        <label>Z_OBSOLETE</label>
        <summaryFilterItems>
            <field>rstk__sylimitd__c.rstk__sylimitd_type__c</field>
            <operation>equals</operation>
            <value>SO</value>
        </summaryFilterItems>
        <summaryForeignKey>rstk__sylimitd__c.rstk__sylimitd_sylimits__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__sylimits_soapicnt__c</fullName>
        <label>SOAPI Count</label>
        <summarizedField>rstk__sylimitd__c.rstk__sylimitd_recordcount__c</summarizedField>
        <summaryFilterItems>
            <field>rstk__sylimitd__c.rstk__sylimitd_type__c</field>
            <operation>equals</operation>
            <value>SO</value>
        </summaryFilterItems>
        <summaryForeignKey>rstk__sylimitd__c.rstk__sylimitd_sylimits__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__sylimits_sydata__c</fullName>
        <label>Z_OBSOLETE</label>
        <summaryFilterItems>
            <field>rstk__sylimitd__c.rstk__sylimitd_type__c</field>
            <operation>equals</operation>
            <value>SY</value>
        </summaryFilterItems>
        <summaryForeignKey>rstk__sylimitd__c.rstk__sylimitd_sylimits__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__sylimits_sydatacnt__c</fullName>
        <label>SYDATA Count</label>
        <summarizedField>rstk__sylimitd__c.rstk__sylimitd_recordcount__c</summarizedField>
        <summaryFilterItems>
            <field>rstk__sylimitd__c.rstk__sylimitd_type__c</field>
            <operation>equals</operation>
            <value>SY</value>
        </summaryFilterItems>
        <summaryForeignKey>rstk__sylimitd__c.rstk__sylimitd_sylimits__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Transaction Object Counter</label>
    <listViews>
        <fullName>rstk__SYLIMIT</fullName>
        <columns>NAME</columns>
        <columns>rstk__sylimits_poloader__c</columns>
        <columns>rstk__sylimits_soapi__c</columns>
        <columns>rstk__sylimits_sydata__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>SYLIMIT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Sylimits</fullName>
        <columns>NAME</columns>
        <columns>rstk__sylimits_seq__c</columns>
        <columns>rstk__sylimits_soapi__c</columns>
        <columns>rstk__sylimits_sydata__c</columns>
        <columns>rstk__sylimits_poloader__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Sylimits</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Object Counter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>